# gimp-custom

./: .gitignore  GEMINI.md  main.py  pyproject.toml  tomd.sh
.agents/skills/: write_specs.md
app_build/: nanobanana_inpaint.py  out.txt  pyproject.toml  run_test.py
app_build/tests/: test_integration.py  test_nanobanana_inpaint.py
dev-plugins/examples/: goat-exercise-py3.py  less-simple-plugin.py
plug-ins/palette-to-gradient/: palette-to-gradient.py
reference/libgimp-3.0/: alias.BablFormat.html  alias.ColorArray.html  alias.CoreObjectArray.html  alias.CoreObjectArray.md  callback.BatchFunc.html  callback.ExportGetCapabilitiesFunc.html  callback.ExportGetCapabilitiesFunc.md  callback.ExtractVectorFunc.html  callback.ModuleQueryFunc.html  callback.ModuleRegisterFunc.html  callback.ModuleRegisterFunc.md  callback.ProgressFunc.html  callback.ProgressFunc.md  callback.ProgressVtableEndFunc.html  callback.ProgressVtableGetWindowFunc.html  callback.ProgressVtableGetWindowFunc.md  callback.ProgressVtablePulseFunc.html  callback.ProgressVtableSetTextFunc.html  callback.ProgressVtableSetTextFunc.md  callback.ProgressVtableSetValueFunc.html  callback.ProgressVtableSetValueFunc.md  callback.ProgressVtableStartFunc.html  callback.PutPixelFunc.html  callback.RenderFunc.html  callback.RunExportFunc.html  callback.RunFunc.html  callback.RunFunc.md  callback.RunImageFunc.html  callback.RunImageFunc.md  callback.RunLoadFunc.html  callback.RunThumbnailFunc.html  callback.RunThumbnailFunc.md  callback.RunVectorLoadFunc.html  class.BatchProcedure.html  class.Brush.html  class.Brush.md  class.Channel.html  class.Choice.html  class.ColorConfig.html  class.ColorProfile.html  (+2760 more)
reference/libgimpui-3.0/: callback.HelpFunc.html  callback.ImageConstraintFunc.html  callback.IntRadioFrameSensitivityFunc.html  class.Browser.md  (+1728 more)
(+1565 files in other folders)
